--- a/code/data_sim.Rmd
+++ b/code/data_sim.Rmd
@@ -139,8 +139,8 @@ Last but not least, we need to set the seed for the random number generator. Thi
 
 ```{r seed-rng, eval = FALSE}
 
-seed_smorfia <- 17 # 'A disgrazia!
-set.seed(seed_smorfia) # set RNG seed
+seed_smorfia <- 17
+set.seed(seed_smorfia)
 
 ```
 
@@ -474,7 +474,7 @@ ttest_between_results <-
     formula = value ~ treatment,
     p.adjust.method = "holm",
     paired = FALSE,
-    var.equal = FALSE,
+    var.equal = TRUE,
     alternative = "less",
     mu = 0,
     conf.level = .95,
@@ -489,45 +489,32 @@ ttest_between_results %>%
 
 Results indicate that the mean test score is significantly smaller in the `placebo` compared to the `drug` condition: *t*(`r format(ttest_between_results$df, digits = 4)`) = `r format(ttest_between_results$statistic, digits = 3)`, *p* = `r format(ttest_between_results$p, digits = 3)`.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## Within-subject t-test
 
-### Data Simulation
+Imagine we show to participants emotional or neutral pictures before the online test. All participants (in this case, N = 50) are presented with all pictures, so this is a within-subject design. Based on published literature and/or our own data collected as part of previous projects, we expect the test scores to follow:
 
-```{r ttest-within-data}
+- a normal distribution with $\mu$ = 1.3 and $\sigma$ = 1.2 in the **neutral** condition
+- a normal distribution with $\mu$ = 2.1 and $\sigma$ = 1.6 in the **emotion** condition
 
-# parameters
+Create the variables:
+
+```{r ttest-within-params}
+
 ttest_within_within <- list(condition = c("neutral", "emotion")) # list of within-subject factors
 ttest_within_n <- list(neutral = 50, emotion = 50) # number of participants must be the same for each condition
 ttest_within_mu_cond <- list(neutral = 1.3, emotion = 2.1)
 ttest_within_sd_cond <- list(neutral = 1.2, emotion = 1.6)
 ttest_within_r <- .7 # correlations among variables
 
-# data simulation
+```
+
+Simulate data:
+
+```{r ttest-within-data}
+
 ttest_within_data <-
   sim_design(
-    within = list(condition = c("neutral", "emotion")),
+    within = ttest_within_within,
     n = ttest_within_n,
     mu = ttest_within_mu_cond,
     sd = ttest_within_sd_cond,
@@ -541,11 +528,11 @@ ttest_within_data <-
   ) %>%
   as_tibble()
 
-# save as .csv
-write_csv(
-  ttest_within_data,
-  here("data/ttest_within_data.csv")
-)
+```
+
+Look at the first 10 rows of the simulated dataset:
+
+```{r ttest-within-data-show}
 
 # show first 10 rows
 ttest_within_data %>%
@@ -555,30 +542,18 @@ ttest_within_data %>%
 
 ```
 
-### Statistical Analysis
+Save the data:
 
-```{r ttest-within-test}
+```{r ttest-within-data-save}
 
-ttest_within_results <-
-  t_test(
-    data = ttest_within_data,
-    formula = value ~ condition,
-    p.adjust.method = "holm",
-    paired = TRUE,
-    var.equal = FALSE,
-    alternative = "two.sided",
-    mu = 0,
-    conf.level = .95,
-    detailed = FALSE
-  )
-
-ttest_within_results %>%
-  kable(digits = 12) %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+write_csv(
+  ttest_within_data,
+  here("data", "ttest_within_data.csv")
+)
 
 ```
 
-### Graph
+Plot:
 
 ```{r ttest-within-plot}
 
@@ -587,6 +562,14 @@ ttest_within_plot <-
   plot_design(geoms = c("box", "violin", "jitter")) +
   ggtitle("Within-subject t-test") +
   theme_custom
+
+ttest_within_plot
+
+```
+
+Save the plot:
+
+```{r ttest-within-plot-save}
 
 ggsave(
   filename = "ttest_within_plot.png",
@@ -599,9 +582,242 @@ ggsave(
   dpi = 300
 )
 
-ttest_within_plot
+```
+
+### Parameter recovery
+
+Verify that `faux` correctly sampled from the two normal distributions indicated above:
+
+```{r ttest-within-param-recovery}
+
+ttest_within_param_recovery <-
+  ttest_within_data %>%
+  group_by(condition) %>% 
+  get_summary_stats(
+    type = "mean_sd"
+  ) %>% 
+  ungroup() %>% 
+  mutate(
+    mean_imputed = map_chr(ttest_within_mu_cond, toString),
+    sd_imputed = map_chr(ttest_within_sd_cond, toString)
+  ) %>% 
+  select(variable, condition, n, mean, mean_imputed, sd, sd_imputed)
+
+ttest_within_param_recovery %>%
+  kable(digits = 2) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
 
 ```
+
+Looks ok.
+
+### Statistical Analysis
+
+Our research hypothesis is that the test scores will be statistically larger after exposure to the emotional relative to neutral pictures. Let's run a one-tailed paired-sample Student's t-test:
+
+```{r ttest-within-test}
+
+ttest_within_results <-
+  t_test(
+    data = ttest_within_data,
+    formula = value ~ condition,
+    p.adjust.method = "holm",
+    paired = TRUE,
+    var.equal = TRUE,
+    alternative = "less",
+    mu = 0,
+    conf.level = .95,
+    detailed = FALSE
+  )
+
+ttest_within_results %>%
+  kable(digits = 2) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+
+```
+
+Results indicate that the mean test score is significantly larger in the `emotional` compared to the `neutral` condition: *t*(`r format(ttest_within_results$df, digits = 4)`) = `r format(ttest_within_results$statistic, digits = 3)`, *p* = `r format(ttest_within_results$p, digits = 3)`.
+
+## 2 x 3 mixed ANOVA
+
+Now our hypothetical design gets a bit more complicated. Imagine that, before the online test, we show to participants 50 neutral, 50 pleasant, and 50 unpleasant pictures. Participants are randomly assigned to two groups: one will be administered a drug (N = 30), the other a placebo (N = 40). This is a mixed design. Based on published literature and/or our own data collected as part of previous projects, we expect the following test scores:
+
+* **control** group:
+  - **neutral** condition: normal distribution with $\mu$ = 1 and $\sigma$ = 1
+  - **unpleasant** condition: normal distribution with $\mu$ = 1.5 and $\sigma$ = 1.2
+  - **pleasant** condition: normal distribution with $\mu$ = 1.4 and $\sigma$ = 1.2
+* **drug** group:
+  - **neutral** condition: normal distribution with $\mu$ = 1.1 and $\sigma$ = 1.2
+  - **unpleasant** condition: normal distribution with $\mu$ = 1.4 and $\sigma$ = 1.5
+  - **pleasant** condition: normal distribution with $\mu$ = 2.1 and $\sigma$ = 1.6
+
+Create the variables:
+
+```{r ANOVA-params}
+
+ANOVA_within <- list(condition = c("neutral", "unpleasant", "pleasant"))
+ANOVA_between <- list(treatment = c("control", "drug"))
+ANOVA_n <- list(
+  control = c(neutral = 40, unpleasant = 40, pleasant = 40), # number of participants must be the same for each condition...
+  drug = c(neutral = 30, unpleasant = 30, pleasant = 30) # ... but can be different between groups
+)
+ANOVA_mu_cond <- list(
+  control = c(neutral = 1, unpleasant = 1.5, pleasant = 1.4),
+  drug = c(neutral = 1.1, unpleasant = 1.4, pleasant = 2.1)
+)
+ANOVA_sd_cond <- list(
+  control = c(neutral = 1, unpleasant = 1.2, pleasant = 1.2),
+  drug = c(neutral = 1.2, unpleasant = 1.5, pleasant = 1.6)
+)
+
+ANOVA_r <- list( # if the design has more than 2 within-subject conditions, specify each correlation in the upper right triangle of the correlation matrix as a vector (https://debruine.github.io/faux/articles/sim_design.html#correlations-1)
+  control = c(
+    .40, .50,
+    .60
+  ),
+  drug = c(
+    .15, .25,
+    .45
+  )
+)
+
+```
+
+Simulate data:
+
+```{r ANOVA-data}
+
+ANOVA_data <-
+  sim_design(
+    within = ANOVA_within,
+    between = ANOVA_between,
+    n = ANOVA_n,
+    mu = ANOVA_mu_cond,
+    sd = ANOVA_sd_cond,
+    r = ANOVA_r,
+    empirical = FALSE,
+    long = TRUE,
+    dv = list(value = "value"),
+    id = list(id = "id"),
+    plot = FALSE,
+    rep = 1
+  ) %>%
+  as_tibble()
+
+```
+
+Look at the first 10 rows of the simulated dataset:
+
+```{r ANOVA-data-show}
+
+# show first 10 rows
+ANOVA_data %>%
+  head(n = 10) %>%
+  kable() %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+
+```
+
+Save the data:
+
+```{r ANOVA-data-save}
+
+write_csv(
+  ANOVA_data,
+  here("data/ANOVA_data.csv")
+)
+
+```
+
+Plot:
+
+```{r ANOVA-plot}
+
+ANOVA_plot <-
+  ANOVA_data %>%
+  plot_design(geoms = c("box", "violin", "jitter")) +
+  ggtitle("Mixed ANOVA") +
+  theme_custom +
+  theme(legend.position = "right")
+
+ANOVA_plot
+
+```
+
+Save the plot:
+
+```{r ANOVA-plot-save}
+
+ggsave(
+  filename = "ANOVA_plot.png",
+  plot = ANOVA_plot,
+  device = "png",
+  path = here("figures"),
+  width = 8,
+  height = 8,
+  units = "in",
+  dpi = 300
+)
+
+```
+
+### Parameter recovery
+
+Verify that `faux` correctly sampled from the normal distributions indicated above:
+
+```{r ANOVA-param-recovery}
+
+
+############################################
+# FROM HERE
+############################################
+
+
+
+
+
+
+
+
+
+ANOVA_param_recovery <-
+  ANOVA_data %>%
+  group_by(treatment, condition) %>% 
+  get_summary_stats(
+    type = "mean_sd"
+  ) %>% 
+  ungroup() %>% 
+  mutate(
+    mean_imputed = map_chr(ANOVA_within, toString),
+    sd_imputed = map_chr(ttest_within_sd_cond, toString)
+  ) %>% 
+  select(variable, condition, n, mean, mean_imputed, sd, sd_imputed)
+
+ttest_within_param_recovery %>%
+  kable(digits = 2) %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"))
+
+
+
+
+
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ## 2 x 3 mixed ANOVA
 
